# task

./: CMakeLists.txt  main.cpp
include/: Filter.h  FocusStacker.h  FocusStacking.h  Merge.h
src/: Filter.cpp  FocusStacker.cpp  FocusStacking.cpp  Merge.cpp
